--- a/admin-splitr/.gitignore
+++ b/admin-splitr/.gitignore
@@ -1,24 +1,34 @@
-# Logs
-logs
-*.log
+# Dependencies
+node_modules/
+
+# Build output
+.next/
+out/
+build/
+
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Editor settings
+.vscode/
+.idea/
+*.swp
+
+# Optional: lockfiles (kalau mau lintas package manager)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
