update: pie chart dashboard and bni sso

--- a/admin-splitr/package.json
+++ b/admin-splitr/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "next": "15.4.6",
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
