--- a/admin-splitr/package.json
+++ b/admin-splitr/package.json
@@ -9,28 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-<<<<<<< Updated upstream
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.6"
-=======
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
     "@tailwindcss/vite": "^4.1.11",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.539.0",
+    "next": "^15.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
     "remixicon": "^4.6.0",
     "tailwindcss": "^4.1.11"
->>>>>>> Stashed changes
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4"
   }
 }
