--- a/admin-splitr/package.json
+++ b/admin-splitr/package.json
@@ -13,7 +13,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.539.0",
     "next": "^15.4.6",
     "react": "^19.1.1",
