--- a/admin-splitr/package.json
+++ b/admin-splitr/package.json
@@ -12,19 +12,7 @@
     "axios": "^1.11.0",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.1",
-    "@tailwindcss/vite": "^4.1.11",
-    "js-cookie": "^3.0.5",
-    "jspdf": "^3.0.1",
-    "jspdf-autotable": "^5.0.2",
-    "lucide-react": "^0.539.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.0",
-    "remixicon": "^4.6.0",
-    "tailwindcss": "^4.1.11"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
