--- a/admin-splitr/package.json
+++ b/admin-splitr/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.0",
-    "remixicon": "^4.6.0"
+    "remixicon": "^4.6.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
