--- a/admin-splitr/vercel.json
+++ b/admin-splitr/vercel.json
@@ -1,9 +1,3 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "framework": "nextjs",
-  "regions": ["sin1"],
-  "env": {
-    "NEXT_PUBLIC_API_BASE": "@next_public_api_base"
-  }
+  "regions": ["sin1"]
 }
